--- a/qytest-run/src/main/resources/application.yml
+++ b/qytest-run/src/main/resources/application.yml
@@ -1,15 +1,16 @@
 server:
-  port: 5000
+  port: 5005
 
 spring:
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      driver-class-name: com.mysql.jdbc.Driver
     #---  zj url  ---#
-        url: jdbc:mysql://localhost:3306/qy?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-        username: one way one year
-        password: 123
+      url: jdbc:mysql://localhost:3306/qy?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+      username: root
+      password: 123
 
 mybatis:
   mapper-locations: classpath:mappers/*.xml
-  type-aliases-package: zju.edu.qytest.pojo
+  type-aliases-package: zju.edu.qyTest.pojo
