--- a/qyTest-run/src/main/resources/log4j.properties
+++ b/qyTest-run/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.console.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]-[
 
 log4j.appender.infoFile = org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.infoFile.Threshold = INFO  
-log4j.appender.infoFile.File = C:/logs/log
+log4j.appender.infoFile.File = E:/java_project/qyTest/qyTest-run/src/main/resources/logs/log
 log4j.appender.infoFile.DatePattern = '.'yyyy-MM-dd'.log'  
 log4j.appender.infoFile.Append=true
 log4j.appender.infoFile.layout = org.apache.log4j.PatternLayout  
@@ -18,7 +18,7 @@ log4j.appender.infoFile.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]-
 
 log4j.appender.errorFile = org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.errorFile.Threshold = ERROR  
-log4j.appender.errorFile.File = C:/logs/error  
+log4j.appender.errorFile.File = E:/java_project/qyTest/qyTest-run/src/main/resources/logs/error  
 log4j.appender.errorFile.DatePattern = '.'yyyy-MM-dd'.log'  
 log4j.appender.errorFile.Append=true  
 log4j.appender.errorFile.layout = org.apache.log4j.PatternLayout  
@@ -26,7 +26,7 @@ log4j.appender.errorFile.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]
 
 log4j.appender.debugfile = org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.debugfile.Threshold = DEBUG  
-log4j.appender.debugfile.File = C:/logs/debug  
+log4j.appender.debugfile.File = E:/java_project/qyTest/qyTest-run/src/main/resources/logs/debug  
 log4j.appender.debugfile.DatePattern = '.'yyyy-MM-dd'.log'  
 log4j.appender.debugfile.Append=true  
 log4j.appender.debugfile.layout = org.apache.log4j.PatternLayout  
